tests/snapshots/snapshots__fixture_anyhow_level2.snap
---
source: tests/snapshots.rs
expression: output
---
backtrace.rs
     8→pub(crate) enum Backtrace {}
    18→macro_rules! impl_backtrace {
    32→macro_rules! backtrace {
    64→macro_rules! backtrace_if_absent {
    71→mod capture {
    82→    pub(crate) struct Backtrace {
    86→    pub(crate) enum BacktraceStatus {
    92→    enum Inner {
    98→    struct Capture {
   104→    struct BacktraceFrame {
   109→    struct BacktraceSymbol {
   116→    enum BytesOrWide {
   121→    impl Debug for Backtrace {
   122→        fn fmt(&self, fmt: &mut fmt::Formatter) -> fmt::Result {
   147→    impl Debug for BacktraceFrame {
   148→        fn fmt(&self, fmt: &mut fmt::Formatter) -> fmt::Result {
   155→    impl Debug for BacktraceSymbol {
   156→        fn fmt(&self, fmt: &mut fmt::Formatter) -> fmt::Result {
   177→    impl Debug for BytesOrWide {
   178→        fn fmt(&self, fmt: &mut fmt::Formatter) -> fmt::Result {
   191→    impl Backtrace {
   192→        fn enabled() -> bool {
   211→        pub(crate) fn capture() -> Backtrace {
   222→        fn create(ip: usize) -> Backtrace {
   252→        pub(crate) fn status(&self) -> BacktraceStatus {
   261→    impl Display for Backtrace {
   262→        fn fmt(&self, fmt: &mut fmt::Formatter) -> fmt::Result {
   316→    impl LazilyResolvedCapture {
   317→        fn new(capture: Capture) -> Self {
   324→        fn force(&self) -> &Capture {
   341→    unsafe impl Sync for LazilyResolvedCapture where Capture: Sync {}
   343→    impl Capture {
   344→        fn resolve(&mut self) {
   370→    fn output_filename(
   407→fn _assert_send_sync() {
chain.rs
    11→pub(crate) struct Chain<'a> {
    16→pub(crate) enum ChainState<'a> {
    26→impl<'a> Chain<'a> {
    28→    pub fn new(head: &'a (dyn StdError + 'static)) -> Self {
    35→impl<'a> Iterator for Chain<'a> {
    36→    type Item = &'a (dyn StdError + 'static);
    38→    fn next(&mut self) -> Option<Self::Item> {
    50→    fn size_hint(&self) -> (usize, Option<usize>) {
    57→impl DoubleEndedIterator for Chain<'_> {
    58→    fn next_back(&mut self) -> Option<Self::Item> {
    76→impl ExactSizeIterator for Chain<'_> {
    77→    fn len(&self) -> usize {
    94→impl Default for Chain<'_> {
    95→    fn default() -> Self {
context.rs
     9→mod ext {
    12→    pub trait StdError {
    13→        fn ext_context<C>(self, context: C) -> Error
    19→    impl<E> StdError for E
    23→        fn ext_context<C>(self, context: C) -> Error
    32→    impl StdError for Error {
    33→        fn ext_context<C>(self, context: C) -> Error
    42→impl<T, E> Context<T, E> for Result<T, E>
    46→    fn context<C>(self, context: C) -> Result<T, Error>
    58→    fn with_context<C, F>(self, context: F) -> Result<T, Error>
    90→impl<T> Context<T, Infallible> for Option<T> {
    91→    fn context<C>(self, context: C) -> Result<T, Error>
   103→    fn with_context<C, F>(self, context: F) -> Result<T, Error>
   115→impl<C, E> Debug for ContextError<C, E>
   120→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   128→impl<C, E> Display for ContextError<C, E>
   132→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
   137→impl<C, E> StdError for ContextError<C, E>
   142→    fn source(&self) -> Option<&(dyn StdError + 'static)> {
   147→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
   152→impl<C> StdError for ContextError<C, Error>
   156→    fn source(&self) -> Option<&(dyn StdError + 'static)> {
   161→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
   166→struct Quoted<C>(C);
   168→impl<C> Debug for Quoted<C>
   172→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
   180→impl Write for Quoted<&mut fmt::Formatter<'_>> {
   181→    fn write_str(&mut self, s: &str) -> fmt::Result {
   186→pub(crate) mod private {
   189→    pub trait Sealed {}
   191→    impl<T, E> Sealed for Result<T, E> where E: ext::StdError {}
   192→    impl<T> Sealed for Option<T> {}
ensure.rs
    10→pub trait BothDebug {
    11→    fn __dispatch_ensure(self, msg: &'static str) -> Error;
    14→impl<A, B> BothDebug for (A, B)
    19→    fn __dispatch_ensure(self, msg: &'static str) -> Error {
    25→pub trait NotBothDebug {
    26→    fn __dispatch_ensure(self, msg: &'static str) -> Error;
    29→impl<A, B> NotBothDebug for &(A, B) {
    30→    fn __dispatch_ensure(self, msg: &'static str) -> Error {
    40→impl Buf {
    41→    fn new() -> Self {
    48→    fn as_str(&self) -> &str {
    58→impl Write for Buf {
    59→    fn write_str(&mut self, s: &str) -> fmt::Result {
    81→fn render(msg: &'static str, lhs: &dyn Debug, rhs: &dyn Debug) -> Error {
   105→macro_rules! __parse_ensure {
   886→macro_rules! __fancy_ensure {
   912→macro_rules! __fallback_ensure {
error.rs
    19→impl Error {
    30→    pub fn new<E>(error: E) -> Self
    77→    pub fn msg<M>(message: M) -> Self
   140→    pub fn from_boxed(boxed_error: Box<dyn StdError + Send + Sync + 'static>) -> Self {
   147→    pub(crate) fn construct_from_std<E>(error: E, backtrace: Option<Backtrace>) -> Self
   170→    pub(crate) fn construct_from_adhoc<M>(message: M, backtrace: Option<Backtrace>) -> Self
   198→    pub(crate) fn construct_from_display<M>(message: M, backtrace: Option<Backtrace>) -> Self
   227→    pub(crate) fn construct_from_context<C, E>(
   260→    pub(crate) fn construct_from_boxed(
   293→    unsafe fn construct<E>(
   372→    pub fn context<C>(self, context: C) -> Self
   432→    pub fn backtrace(&self) -> &impl_backtrace!() {
   459→    pub fn chain(&self) -> Chain {
   470→    pub fn root_cause(&self) -> &(dyn StdError + 'static) {
   482→    pub fn is<E>(&self) -> bool
   490→    pub fn downcast<E>(mut self) -> Result<E, Self>
   554→    pub fn downcast_ref<E>(&self) -> Option<&E>
   568→    pub fn downcast_mut<E>(&mut self) -> Option<&mut E>
   622→    pub fn into_boxed_dyn_error(self) -> Box<dyn StdError + Send + Sync + 'static> {
   663→    pub fn reallocate_into_boxed_dyn_error_without_backtrace(
   675→    pub(crate) fn provide<'a>(&'a self, request: &mut Request<'a>) {
   686→    pub fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>) {
   692→impl<E> From<E> for Error
   697→    fn from(error: E) -> Self {
   704→impl Deref for Error {
   705→    type Target = dyn StdError + Send + Sync + 'static;
   707→    fn deref(&self) -> &Self::Target {
   713→impl DerefMut for Error {
   714→    fn deref_mut(&mut self) -> &mut Self::Target {
   719→impl Display for Error {
   720→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
   725→impl Debug for Error {
   726→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
   731→impl Drop for Error {
   732→    fn drop(&mut self) {
   740→struct ErrorVTable {
   757→unsafe fn object_drop<E>(e: Own<ErrorImpl>) {
   765→unsafe fn object_drop_front<E>(e: Own<ErrorImpl>, target: TypeId) {
   775→unsafe fn object_ref<E>(e: Ref<ErrorImpl>) -> Ref<dyn StdError + Send + Sync + 'static>
   788→unsafe fn object_boxed<E>(e: Own<ErrorImpl>) -> Box<dyn StdError + Send + Sync + 'static>
   799→unsafe fn object_reallocate_boxed<E>(e: Own<ErrorImpl>) -> Box<dyn StdError + Send + Sync + 'static>
   809→unsafe fn object_downcast<E>(e: Ref<ErrorImpl>, target: TypeId) -> Option<Ref<()>>
   832→fn no_backtrace(e: Ref<ErrorImpl>) -> Option<&Backtrace> {
   839→unsafe fn context_downcast<C, E>(e: Ref<ErrorImpl>, target: TypeId) -> Option<Ref<()>>
   859→unsafe fn context_drop_rest<C, E>(e: Own<ErrorImpl>, target: TypeId)
   876→unsafe fn context_chain_downcast<C>(e: Ref<ErrorImpl>, target: TypeId) -> Option<Ref<()>>
   892→unsafe fn context_chain_drop_rest<C>(e: Own<ErrorImpl>, target: TypeId)
   920→unsafe fn context_backtrace<C>(e: Ref<ErrorImpl>) -> Option<&Backtrace>
   934→pub(crate) struct ErrorImpl<E = ()> {
   944→unsafe fn vtable(p: NonNull<ErrorImpl>) -> &'static ErrorVTable {
   952→pub(crate) struct ContextError<C, E> {
   957→impl<E> ErrorImpl<E> {
   958→    fn erase(&self) -> Ref<ErrorImpl> {
   966→impl ErrorImpl {
   967→    pub(crate) unsafe fn error(this: Ref<Self>) -> &(dyn StdError + Send + Sync + 'static) {
   974→    pub(crate) unsafe fn error_mut(this: Mut<Self>) -> &mut (dyn StdError + Send + Sync + 'static) {
   985→    pub(crate) unsafe fn backtrace(this: Ref<Self>) -> &Backtrace {
  1002→    unsafe fn provide<'a>(this: Ref<'a, Self>, request: &mut Request<'a>) {
  1010→    pub(crate) unsafe fn chain(this: Ref<Self>) -> Chain {
  1015→impl<E> StdError for ErrorImpl<E>
  1019→    fn source(&self) -> Option<&(dyn StdError + 'static)> {
  1024→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
  1029→impl<E> Debug for ErrorImpl<E>
  1033→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
  1038→impl<E> Display for ErrorImpl<E>
  1042→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
  1048→impl From<Error> for Box<dyn StdError + Send + Sync + 'static> {
  1050→    fn from(error: Error) -> Self {
  1056→impl From<Error> for Box<dyn StdError + Send + 'static> {
  1058→    fn from(error: Error) -> Self {
  1064→impl From<Error> for Box<dyn StdError + 'static> {
  1066→    fn from(error: Error) -> Self {
  1072→impl AsRef<dyn StdError + Send + Sync> for Error {
  1073→    fn as_ref(&self) -> &(dyn StdError + Send + Sync + 'static) {
  1079→impl AsRef<dyn StdError> for Error {
  1080→    fn as_ref(&self) -> &(dyn StdError + 'static) {
  1085→impl UnwindSafe for Error {}
  1086→impl RefUnwindSafe for Error {}
fmt.rs
     6→impl ErrorImpl {
     7→    pub(crate) unsafe fn display(this: Ref<Self>, f: &mut fmt::Formatter) -> fmt::Result {
    20→    pub(crate) unsafe fn debug(this: Ref<Self>, f: &mut fmt::Formatter) -> fmt::Result {
    69→struct Indented<'a, D> {
    75→impl<T> Write for Indented<'_, T>
    79→    fn write_str(&mut self, s: &str) -> fmt::Result {
kind.rs
    55→pub struct Adhoc;
    58→pub trait AdhocKind: Sized {
    60→    fn anyhow_kind(&self) -> Adhoc {
    65→impl<T> AdhocKind for &T where T: ?Sized + Display + Debug + Send + Sync + 'static {}
    67→impl Adhoc {
    69→    pub fn new<M>(self, message: M) -> Error
    77→pub struct Trait;
    80→pub trait TraitKind: Sized {
    82→    fn anyhow_kind(&self) -> Trait {
    87→impl<E> TraitKind for E where E: Into<Error> {}
    89→impl Trait {
    91→    pub fn new<E>(self, error: E) -> Error
   100→pub struct Boxed;
   104→pub trait BoxedKind: Sized {
   106→    fn anyhow_kind(&self) -> Boxed {
   112→impl BoxedKind for Box<dyn StdError + Send + Sync> {}
   115→impl Boxed {
   117→    pub fn new(self, error: Box<dyn StdError + Send + Sync>) -> Error {
lib.rs
   252→mod backtrace;
   253→mod chain;
   254→mod context;
   255→mod ensure;
   256→mod error;
   257→mod fmt;
   258→mod kind;
   259→mod macros;
   261→mod nightly;
   262→mod ptr;
   263→mod wrapper;
   279→trait StdError: Debug + Display {
   280→    fn source(&self) -> Option<&(dyn StdError + 'static)> {
   390→pub struct Error {
   415→pub struct Chain<'a> {
   468→pub type Result<T, E = Error> = core::result::Result<T, E>;
   616→pub trait Context<T, E>: context::private::Sealed {
   618→    fn context<C>(self, context: C) -> Result<T, Error>
   624→    fn with_context<C, F>(self, f: F) -> Result<T, Error>
   650→pub fn Ok<T>(value: T) -> Result<T> {
   656→pub mod __private {
   672→    pub mod kind {
   684→    pub fn format_err(args: Arguments) -> Error {
   698→    pub fn must_use(error: Error) -> Error {
   708→    mod not {
   710→        pub trait Bool {
   711→            fn not(self) -> bool;
   714→        impl Bool for bool {
   716→            fn not(self) -> bool {
   721→        impl Bool for &bool {
   723→            fn not(self) -> bool {
macros.rs
    58→macro_rules! bail {
    70→macro_rules! __ensure {
   204→macro_rules! anyhow {
   230→macro_rules! __anyhow {
nightly.rs
    13→const _: () = {
    16→    struct MyError(Backtrace);
    18→    impl Debug for MyError {
    19→        fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
    24→    impl Display for MyError {
    25→        fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
    30→    impl Error for MyError {
    31→        fn provide<'a>(&'a self, request: &mut Request<'a>) {
    39→const _: Option<&str> = option_env!("RUSTC_BOOTSTRAP");
    41→pub fn request_ref_backtrace(err: &dyn Error) -> Option<&Backtrace> {
    45→fn request_ref<'a, T>(err: &'a (impl Error + ?Sized)) -> Option<&'a T>
    52→pub fn provide_ref_backtrace<'a>(request: &mut Request<'a>, backtrace: &'a Backtrace) {
    56→pub fn provide<'a>(err: &'a (impl Error + ?Sized), request: &mut Request<'a>) {
ptr.rs
     6→pub struct Own<T>
    13→unsafe impl<T> Send for Own<T> where T: ?Sized {}
    15→unsafe impl<T> Sync for Own<T> where T: ?Sized {}
    17→impl<T> Copy for Own<T> where T: ?Sized {}
    19→impl<T> Clone for Own<T>
    23→    fn clone(&self) -> Self {
    28→impl<T> Own<T>
    32→    pub fn new(ptr: Box<T>) -> Self {
    38→    pub fn cast<U: CastTo>(self) -> Own<U::Target> {
    44→    pub unsafe fn boxed(self) -> Box<T> {
    48→    pub fn by_ref(&self) -> Ref<T> {
    55→    pub fn by_mut(&mut self) -> Mut<T> {
    64→pub struct Ref<'a, T>
    72→impl<'a, T> Copy for Ref<'a, T> where T: ?Sized {}
    74→impl<'a, T> Clone for Ref<'a, T>
    78→    fn clone(&self) -> Self {
    83→impl<'a, T> Ref<'a, T>
    87→    pub fn new(ptr: &'a T) -> Self {
    94→    pub fn from_raw(ptr: NonNull<T>) -> Self {
   101→    pub fn cast<U: CastTo>(self) -> Ref<'a, U::Target> {
   108→    pub fn by_mut(self) -> Mut<'a, T> {
   115→    pub fn as_ptr(self) -> *const T {
   119→    pub unsafe fn deref(self) -> &'a T {
   125→pub struct Mut<'a, T>
   133→impl<'a, T> Copy for Mut<'a, T> where T: ?Sized {}
   135→impl<'a, T> Clone for Mut<'a, T>
   139→    fn clone(&self) -> Self {
   144→impl<'a, T> Mut<'a, T>
   148→    pub fn cast<U: CastTo>(self) -> Mut<'a, U::Target> {
   155→    pub fn by_ref(self) -> Ref<'a, T> {
   162→    pub fn extend<'b>(self) -> Mut<'b, T> {
   169→    pub unsafe fn deref_mut(self) -> &'a mut T {
   174→impl<'a, T> Mut<'a, T> {
   175→    pub unsafe fn read(self) -> T {
   181→pub trait CastTo {
   185→impl<T> CastTo for T {
   186→    type Target = T;
wrapper.rs
    11→pub struct MessageError<M>(pub M);
    13→impl<M> Debug for MessageError<M>
    17→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    22→impl<M> Display for MessageError<M>
    26→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    31→impl<M> StdError for MessageError<M> where M: Display + Debug + 'static {}
    34→pub struct DisplayError<M>(pub M);
    36→impl<M> Debug for DisplayError<M>
    40→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    45→impl<M> Display for DisplayError<M>
    49→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    54→impl<M> StdError for DisplayError<M> where M: Display + 'static {}
    58→pub struct BoxedError(pub Box<dyn StdError + Send + Sync>);
    61→impl Debug for BoxedError {
    62→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    68→impl Display for BoxedError {
    69→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    75→impl StdError for BoxedError {
    76→    fn source(&self) -> Option<&(dyn StdError + 'static)> {
    81→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
