tests/snapshots/snapshots__fixture_color.snap
---
source: tests/snapshots.rs
expression: output
---
LICENSE.md
README.md
     1→# color [![](https://github.com/fatih/color/workflows/build/badge.svg)](https://github.com/fatih/color/actions) [![PkgGoDev](https://pkg.go.dev/badge/github.com/fatih/color)](https://pkg.go.dev/github.com/fatih/color)
    10→## Install
    16→## Examples
    18→### Standard colors
    33→### RGB colors
    45→### Mix and reuse colors
    71→### Use your own output (io.Writer)
    81→### Custom print functions (PrintFunc)
    94→### Custom fprint functions (FprintFunc)
   105→### Insert into noncolor strings (SprintFunc)
   124→### Plug into existing code
   142→### Disable/Enable color
   177→## GitHub Actions
   182→## Credits
   187→## License
color.go
    22→	NoColor
    27→	Output
    30→	Error
    34→	colorsCache
    35→	colorsCacheMu
    39→func noColorIsSet
    44→type Color
    50→type Attribute
    52→const escape
    56→	Reset
    57→	Bold
    58→	Faint
    59→	Italic
    60→	Underline
    61→	BlinkSlow
    62→	BlinkRapid
    63→	ReverseVideo
    64→	Concealed
    65→	CrossedOut
    69→	ResetBold
    70→	ResetItalic
    71→	ResetUnderline
    72→	ResetBlinking
    74→	ResetReversed
    75→	ResetConcealed
    76→	ResetCrossedOut
    79→var mapResetAttributes
    93→	FgBlack
    94→	FgRed
    95→	FgGreen
    96→	FgYellow
    97→	FgBlue
    98→	FgMagenta
    99→	FgCyan
   100→	FgWhite
   103→	foreground
   108→	FgHiBlack
   109→	FgHiRed
   110→	FgHiGreen
   111→	FgHiYellow
   112→	FgHiBlue
   113→	FgHiMagenta
   114→	FgHiCyan
   115→	FgHiWhite
   120→	BgBlack
   121→	BgRed
   122→	BgGreen
   123→	BgYellow
   124→	BgBlue
   125→	BgMagenta
   126→	BgCyan
   127→	BgWhite
   130→	background
   135→	BgHiBlack
   136→	BgHiRed
   137→	BgHiGreen
   138→	BgHiYellow
   139→	BgHiBlue
   140→	BgHiMagenta
   141→	BgHiCyan
   142→	BgHiWhite
   146→func New
   160→func RGB
   165→func BgRGB
   171→func (c *Color) AddRGB
   178→func (c *Color) AddBgRGB
   185→func Set
   193→func Unset
   202→func (c *Color) Set
   211→func (c *Color) unset
   222→func (c *Color) SetWriter
   233→func (c *Color) UnsetWriter
   243→func (c *Color) Add
   253→func (c *Color) Fprint
   265→func (c *Color) Print
   276→func (c *Color) Fprintf
   286→func (c *Color) Printf
   297→func (c *Color) Fprintln
   306→func (c *Color) Println
   311→func (c *Color) Sprint
   316→func (c *Color) Sprintln
   321→func (c *Color) Sprintf
   327→func (c *Color) FprintFunc
   335→func (c *Color) PrintFunc
   343→func (c *Color) FprintfFunc
   351→func (c *Color) PrintfFunc
   359→func (c *Color) FprintlnFunc
   367→func (c *Color) PrintlnFunc
   379→func (c *Color) SprintFunc
   388→func (c *Color) SprintfFunc
   397→func (c *Color) SprintlnFunc
   405→func (c *Color) sequence
   416→func (c *Color) wrap
   424→func (c *Color) format
   428→func (c *Color) unformat
   446→func (c *Color) DisableColor
   452→func (c *Color) EnableColor
   456→func (c *Color) isNoColorSet
   467→func (c *Color) Equals
   487→func (c *Color) attrExists
   497→func boolPtr
   501→func getCachedColor
   514→func colorPrint
   528→func colorString
   540→func Black
   544→func Red
   548→func Green
   552→func Yellow
   556→func Blue
   560→func Magenta
   564→func Cyan
   568→func White
   572→func BlackString
   576→func RedString
   580→func GreenString
   584→func YellowString
   588→func BlueString
   592→func MagentaString
   598→func CyanString
   602→func WhiteString
   606→func HiBlack
   610→func HiRed
   614→func HiGreen
   618→func HiYellow
   622→func HiBlue
   626→func HiMagenta
   630→func HiCyan
   634→func HiWhite
   638→func HiBlackString
   644→func HiRedString
   648→func HiGreenString
   654→func HiYellowString
   660→func HiBlueString
   664→func HiMagentaString
   670→func HiCyanString
   674→func HiWhiteString
   679→func sprintln
color_windows.go
     9→func init
doc.go
